@@ -26,7 +26,7 @@ public class PostDto {
         this.id = posting.getId();
         // imageUrls가 null이 아니고 비어있지 않으면 첫 번째 이미지 사용
         List<String> imageUrls = new ArrayList<>(posting.getImageUrls()); // Lazy 초기화
-        this.thumbnail = imageUrls.isEmpty() ? null : imageUrls.get(0);
+        this.thumbnail = imageUrls.isEmpty() ? null : imageUrls.getFirst();
         this.user = new UserSummaryDto(posting.getUser());
     }
 }
